# gear-rs

./: Cargo.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/microkit/: Cargo.toml
crates/microkit/src/: lib.rs  request_ext.rs  server.rs
crates/microkit/src/middlewares/: add_client_headers.rs  client_tracing.rs  mod.rs  request_duration_metrics.rs  set_current_service.rs
examples/helloworld/: Cargo.toml  build.rs
examples/helloworld/proto/: hello.proto
examples/helloworld/src/: main.rs
examples/helloworld/src/services/: hello.rs  mod.rs
