[package]
name = "gear-microkit"
version = "0.1.0"
edition = "2021"

[dependencies]
num_enum = "0.5.7"
once_cell = "1.13.0"
opentelemetry = "0.21.0"
opentelemetry_sdk = "0.21.0"
opentelemetry-http = "0.10.0"
opentelemetry-jaeger = { version = "0.20.0", features = [
    "rt-tokio",
    "collector_client",
    "hyper_collector_client",
] }
opentelemetry-semantic-conventions = "0.13.0"
poem = { version = "1.3.58", features = ["opentelemetry", "tokio-metrics"] }
poem-grpc = { version = "0.2.23", features = ["json-codec"] }
tokio = { version = "1.20.1", features = ["rt"] }
