[package]
name = "gear-microkit"
version = "0.1.0"
edition = "2021"

[dependencies]
num_enum = "0.7.2"
once_cell = "1.13.0"
opentelemetry = "0.24.0"
opentelemetry-http = "0.13.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["trace"] }
opentelemetry-semantic-conventions = "0.16.0"
poem = { version = "3.1.4", features = ["opentelemetry", "tokio-metrics"] }
poem-grpc = { version = "0.5.2", features = ["json-codec"] }
tokio = { version = "1.38.1", features = ["rt"] }
prometheus = "0.13.4"
