[package]
name = "example-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
gear-microkit = { path = "../../crates/microkit" }
poem = "1.3.57"
poem-grpc = "0.2.21"
prost = "0.11.0"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
gear-codegen = { path = "../../crates/codegen" }
