[package]
name = "example-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
gear-microkit = { path = "../../crates/microkit" }
poem = "3.1.4"
poem-grpc = "0.5.2"
prost = "0.13.1"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
gear-codegen = { path = "../../crates/codegen" }
